--- a/src/containers/login/style.css
+++ b/src/containers/login/style.css
@@ -1,12 +1,3 @@
-.wrapper {
-    background: rgb(50, 123, 141);
+@import '../../__data__/style/colors.css';
+@import '../../__data__/style/sizes.css';
 
-    > .login-form {
-        padding: 20px;
-        background-color: white;
-        max-width: 416px;
-        margin: 0 auto;
-        display: flex;
-        flex-direction: column;
-    }
-}
