--- a/src/components/nav/style.css
+++ b/src/components/nav/style.css
@@ -7,6 +7,7 @@
     flex-direction: row;
     align-items: center;
     cursor: pointer;
+    text-decoration: none;
 
     .nav-butt:hover {
         color: #2599ee;
