hk-9 | футер & страница товаров

--- a/src/__data__/style/colors.css
+++ b/src/__data__/style/colors.css
@@ -2,6 +2,10 @@
     --white: white;
     --white-9: #e5e7e8;
 
+    --grey: #fafafa;
+
+
+    --black: black;
     --black-7: #20232a;
     --black-8: #262626;
 
