--- a/src/containers/main/style.css
+++ b/src/containers/main/style.css
@@ -62,6 +62,10 @@
         width: 100%;
         padding-bottom: var(--offset-md);
 
+        a {
+            text-decoration: none;
+        }
+
         .l-s-text {
             margin-right: 10px;
             margin-left: 10px;
