--- a/src/components/footer/style.css
+++ b/src/components/footer/style.css
@@ -8,6 +8,7 @@
     padding-right: var(--offset-md);
     padding-left: var(--offset-md);
     height: 160px;
+    margin-top: auto;
 }
 
 .footer-container {
