--- a/src/containers/contacts/style.css
+++ b/src/containers/contacts/style.css
@@ -1,3 +1,66 @@
 @import '../../__data__/style/colors.css';
 @import '../../__data__/style/sizes.css';
 
+.page {
+    display: flex;
+    flex-direction: column;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--white);
+}
+
+.wrap {
+    display: flex;
+    width: 100vw;
+    max-width: 100vw;
+    background: var(--white);
+    flex-direction: column;
+
+    h1 {
+        font-size: 48px;
+        font-weight: 400;
+        padding: 0 72px;
+    }
+}
+
+.contact-info {
+    display: flex;
+    flex-direction: row;
+    padding: 0 72px;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% / 4);
+    padding-top: var(--offset-sm);
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    width: calc(100% / 4);
+    padding-top: var(--offset-sm);
+}
+
+.social {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    width: calc(100% / 2);
+    padding-top: var(--offset-sm);
+}
+
+.contact-title {
+    font-size: 18px;
+    opacity: 0.6;
+    line-height: 21px;
+    font-weight: normal;
+    margin-bottom: var(--offset-md);
+}
+
+.contact-text {
+    font-size: 18px;
+    line-height: 21px;
+    font-weight: 400;
+    margin-bottom: var(--offset-md);
+}
