--- a/src/__data__/style/colors.css
+++ b/src/__data__/style/colors.css
@@ -3,6 +3,7 @@
     --white-9: #e5e7e8;
 
     --grey: #fafafa;
+    --grey-3: #e0e0e0;
 
 
     --black: black;
@@ -11,4 +12,6 @@
 
     --blue: #2599ee;
     --blue-2: #1e87f0;
+
+    --red: #e01e1e;
 }
