--- a/src/components/basketPage/style.css
+++ b/src/components/basketPage/style.css
@@ -5,15 +5,16 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
+    height: 100vh;
     background-color: var(--white);
 }
 
 .wrap {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    display: flex;
     width: 100vw;
     max-width: 100vw;
     background: var(--white);
     flex-direction: column;
-    justify-content: space-between;
 }
+
+
