--- a/src/containers/basket/steps/style.css
+++ b/src/containers/basket/steps/style.css
@@ -74,3 +74,30 @@ h1 {
     border-radius: 2px;
     padding: 0 16px;
 }
+
+.ready {
+    display: flex;
+    height: 100%;
+    width: 100%;
+    flex-direction: column;
+    margin-top: var(--offset-lg);
+    justify-content: center;
+    align-items: center;
+
+    span {
+        margin-top: var(--offset-sm);
+        font-size: 24px;
+    }
+
+    a {
+        margin-top: var(--offset-sm);
+        color: var(--blue-2);
+        text-decoration: none;
+        font-size: 22px;
+    }
+
+    a::after {
+        content: ">";
+        color: var(--blue-2);
+    }
+}
